[gd_scene load_steps=64 format=3 uid="uid://bqiu1wtam800"]

[ext_resource type="Script" path="res://scripts/test_player_character_script.gd" id="1_636bd"]
[ext_resource type="Script" path="res://scripts/powerups/powerup_manager.gd" id="2_eolm8"]
[ext_resource type="PackedScene" uid="uid://ld0nfnklnql6" path="res://scenes/powerups/power_up_ui.tscn" id="2_xukkd"]
[ext_resource type="Script" path="res://scripts/multiplayer_input.gd" id="4_dhsi6"]
[ext_resource type="Texture2D" uid="uid://bmuq3tb85fm8d" path="res://assets/sprites/character_sprites/orange_bot_mothersheet.png" id="5_isygt"]
[ext_resource type="PackedScene" uid="uid://dbvkq2bq688np" path="res://scenes/CaveBackground.tscn" id="6_lye8l"]

[sub_resource type="Animation" id="Animation_bvmwo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 3]
}

[sub_resource type="Animation" id="Animation_xvex3"]
resource_name = "dash"
length = 0.428579
loop_mode = 1
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58, 59, 60]
}

[sub_resource type="Animation" id="Animation_6fyj1"]
resource_name = "Dead"
length = 0.333342
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qtxea"]
resource_name = "Fall_end"
length = 0.142864
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [22, 23]
}

[sub_resource type="Animation" id="Animation_lv1o4"]
resource_name = "Fall_start"
length = 0.545464
loop_mode = 1
step = 0.0909091
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0909091, 0.181818, 0.272727, 0.363636, 0.454545),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_1lwyr"]
resource_name = "Hurt"
length = 0.250008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}

[sub_resource type="Animation" id="Animation_p78ra"]
resource_name = "idle"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_bvx1i"]
resource_name = "into_wall_slide"
length = 0.20001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [52, 53]
}

[sub_resource type="Animation" id="Animation_lacnp"]
resource_name = "Jump"
length = 0.20001
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_1kjfs"]
resource_name = "Run"
length = 0.676474
loop_mode = 1
step = 0.0294118
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_1iy2o"]
resource_name = "wall_slide"
length = 0.625013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [46, 47, 48, 49, 50]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_brr3u"]
_data = {
"RESET": SubResource("Animation_bvmwo"),
"dash": SubResource("Animation_xvex3"),
"dead": SubResource("Animation_6fyj1"),
"fall_end": SubResource("Animation_qtxea"),
"fall_start": SubResource("Animation_lv1o4"),
"hurt": SubResource("Animation_1lwyr"),
"idle": SubResource("Animation_p78ra"),
"into_wall_slide": SubResource("Animation_bvx1i"),
"jump": SubResource("Animation_lacnp"),
"run": SubResource("Animation_1kjfs"),
"wall_slide": SubResource("Animation_1iy2o")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_voqrl"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Sprite2D:flip_h")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_op1px"]
animation = &"dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hy5qk"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hqgr2"]
animation = &"fall_end"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w36rd"]
animation = &"fall_start"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k0vis"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rvyjk"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y8pwp"]
animation = &"into_wall_slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e1o0n"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_31qxw"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1ul2t"]
animation = &"wall_slide"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bqjit"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ginhq"]
reset = false

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_daml0"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qeowp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q8hrg"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ufo7"]
switch_mode = 1
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p2aqo"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n353o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x2t58"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r66ul"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mdvj4"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6akl4"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_37jhl"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gxcl2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8kvax"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kj3eg"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s4b0m"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_64n7x"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tydlt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kq160"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_earcg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2pdpd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2f3af"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ns4lo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vcxvs"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oub64"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e4lpb"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vmskf"]
states/End/position = Vector2(1073, 182)
states/Start/position = Vector2(94, 176)
states/dash/node = SubResource("AnimationNodeAnimation_op1px")
states/dash/position = Vector2(645.061, 123.904)
states/dead/node = SubResource("AnimationNodeAnimation_hy5qk")
states/dead/position = Vector2(2.48132, 125.057)
states/fall_end/node = SubResource("AnimationNodeAnimation_hqgr2")
states/fall_end/position = Vector2(512, -29)
states/fall_start/node = SubResource("AnimationNodeAnimation_w36rd")
states/fall_start/position = Vector2(326, -46)
states/hurt/node = SubResource("AnimationNodeAnimation_k0vis")
states/hurt/position = Vector2(111.981, 56.4166)
states/idle/node = SubResource("AnimationNodeAnimation_rvyjk")
states/idle/position = Vector2(282, 176)
states/into_wall_slide/node = SubResource("AnimationNodeAnimation_y8pwp")
states/into_wall_slide/position = Vector2(-99.8483, 14.3998)
states/jump/node = SubResource("AnimationNodeAnimation_e1o0n")
states/jump/position = Vector2(306, 33.4166)
states/run/node = SubResource("AnimationNodeAnimation_31qxw")
states/run/position = Vector2(524, 182)
states/wall_slide/node = SubResource("AnimationNodeAnimation_1ul2t")
states/wall_slide/position = Vector2(106.152, -66.0469)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_bqjit"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_ginhq"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_daml0"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_qeowp"), "jump", "fall_start", SubResource("AnimationNodeStateMachineTransition_q8hrg"), "fall_start", "fall_end", SubResource("AnimationNodeStateMachineTransition_5ufo7"), "fall_end", "idle", SubResource("AnimationNodeStateMachineTransition_p2aqo"), "run", "jump", SubResource("AnimationNodeStateMachineTransition_n353o"), "idle", "hurt", SubResource("AnimationNodeStateMachineTransition_x2t58"), "hurt", "idle", SubResource("AnimationNodeStateMachineTransition_r66ul"), "hurt", "dead", SubResource("AnimationNodeStateMachineTransition_mdvj4"), "idle", "dead", SubResource("AnimationNodeStateMachineTransition_6akl4"), "fall_end", "run", SubResource("AnimationNodeStateMachineTransition_37jhl"), "jump", "into_wall_slide", SubResource("AnimationNodeStateMachineTransition_gxcl2"), "fall_start", "into_wall_slide", SubResource("AnimationNodeStateMachineTransition_8kvax"), "into_wall_slide", "wall_slide", SubResource("AnimationNodeStateMachineTransition_kj3eg"), "wall_slide", "idle", SubResource("AnimationNodeStateMachineTransition_s4b0m"), "wall_slide", "jump", SubResource("AnimationNodeStateMachineTransition_64n7x"), "wall_slide", "fall_start", SubResource("AnimationNodeStateMachineTransition_tydlt"), "into_wall_slide", "jump", SubResource("AnimationNodeStateMachineTransition_kq160"), "run", "fall_start", SubResource("AnimationNodeStateMachineTransition_earcg"), "into_wall_slide", "fall_start", SubResource("AnimationNodeStateMachineTransition_2pdpd"), "run", "dash", SubResource("AnimationNodeStateMachineTransition_2f3af"), "dash", "run", SubResource("AnimationNodeStateMachineTransition_ns4lo"), "jump", "dash", SubResource("AnimationNodeStateMachineTransition_vcxvs"), "dash", "jump", SubResource("AnimationNodeStateMachineTransition_oub64"), "fall_start", "dash", SubResource("AnimationNodeStateMachineTransition_e4lpb")]
graph_offset = Vector2(-203.779, -28.9765)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sist4"]
size = Vector2(9.61861, 23.1357)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8vt3m"]
load_path = "res://.godot/imported/red.png-42432e989feef4cdfa07511ade50ab7a.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5ggrr"]
load_path = "res://.godot/imported/green.png-314c33de04b335649345ea7d7aad302b.ctex"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wboyi"]
radius = 7.0
height = 26.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1i0gq"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 0
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:_is_on_floor")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:velocity")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8e02d"]
properties/0/path = NodePath(".:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:input_jump")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:input_dash")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Test Player Character" type="CharacterBody2D" node_paths=PackedStringArray("player_input") groups=["Players"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_636bd")
player_input = NodePath("Input")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -50)
zoom = Vector2(2, 2)
limit_top = -350
limit_bottom = 160
limit_smoothed = true
position_smoothing_enabled = true

[node name="PowerUpUI" parent="." instance=ExtResource("2_xukkd")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_brr3u")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_voqrl")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_vmskf")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -11.4321)
shape = SubResource("RectangleShape2D_sist4")
disabled = true
debug_color = Color(0.858824, 0, 0.878431, 0.419608)

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -49.0
offset_top = -64.0
offset_right = 50.0
offset_bottom = -30.0

[node name="Control2" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0588235, 0.0588235, 0.87451)

[node name="Label" type="Label" parent="Control/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2
text = "R to Reset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_under = SubResource("CompressedTexture2D_8vt3m")
texture_progress = SubResource("CompressedTexture2D_5ggrr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_wboyi")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastRightToPlayer" type="RayCast2D" parent="RayCasts"]
position = Vector2(-1, -6)
target_position = Vector2(10, 0)
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="RayCasts"]
position = Vector2(3, -6)
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="RayCasts"]
position = Vector2(-2, -6)
target_position = Vector2(-10, 0)

[node name="RayCastToObstacle" type="RayCast2D" parent="RayCasts"]
position = Vector2(3, -6)
target_position = Vector2(500, 0)

[node name="RayCastLeftToPlayer" type="RayCast2D" parent="RayCasts"]
position = Vector2(-1, -6)
target_position = Vector2(-9, 0)
collision_mask = 2

[node name="PowerUpManager" type="Node2D" parent="." node_paths=PackedStringArray("parent", "PowerUpUI")]
unique_name_in_owner = true
script = ExtResource("2_eolm8")
parent = NodePath("..")
PowerUpUI = NodePath("../PowerUpUI")

[node name="Timers" type="Node" parent="."]

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="DashCooldown" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]

[node name="OilSpillTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="RespawnTimer" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="DashEffectTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="StunTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1i0gq")

[node name="Input" type="Node" parent="."]
script = ExtResource("4_dhsi6")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="Input"]
replication_config = SubResource("SceneReplicationConfig_8e02d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-10, -30)
texture = ExtResource("5_isygt")
centered = false
offset = Vector2(1, 1)
hframes = 9
vframes = 12
frame = 16
metadata/_edit_lock_ = true

[node name="Death_Explosion" type="Node2D" parent="."]

[node name="CaveBackground" parent="." instance=ExtResource("6_lye8l")]
offset = Vector2(0, -500)
scale = Vector2(2.05, 2.05)
transform = Transform2D(2.05, 0, 0, 2.05, 0, -500)
scroll_ignore_camera_zoom = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="dash_timeout"]
[connection signal="timeout" from="Timers/DashCooldown" to="." method="dash_cooldown_timeout"]
[connection signal="timeout" from="Timers/JumpBufferTimer" to="." method="jump_buffer_timeout"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="coyote_timeout"]
[connection signal="timeout" from="Timers/OilSpillTimer" to="." method="oil_spill_timer_timeout"]
[connection signal="timeout" from="Timers/DashEffectTimer" to="." method="_on_dash_effect_timer_timeout"]
[connection signal="timeout" from="Timers/StunTimer" to="." method="stun_timer_timeout"]
